--- a/css/nav.css
+++ b/css/nav.css
@@ -1,3 +1,4 @@
+/*
 a {
     color: #FFD3B6;
     font-size: 300%;
@@ -24,3 +25,98 @@ a:hover {
     margin-right: 10%;
     margin-top: 4%;
 }
+
+*/
+
+
+/* Navigation */ 
+nav {
+    width: 100%;
+    margin: 0 auto;
+    padding: 50px 0;
+    color: #FFD3B6;
+    font-size: 200%;
+    text-decoration: none;
+    font-family: 'Sora', sans-serif;
+  }
+  nav ul {
+    list-style: none;
+    text-align: center;
+  }
+  nav ul li {
+    display: inline-block;
+  }
+  nav ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #FFD3B6;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0 10px;
+  }
+  nav ul li a,
+  nav ul li a:after,
+  nav ul li a:before {
+    transition: all .3s;
+  }
+ 
+  /* Underline + Fill */
+
+
+nav.fill ul li a {
+position: relative;
+}
+
+nav.fill ul li a:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 0%;
+  content: '.';
+  color: transparent;
+  background: #aaa;
+  height: 1px;
+}
+
+
+nav.fill ul li a {
+  transition: all 1.3s;
+}
+
+
+nav.fill ul li a:hover {
+  color: #fff;
+  z-index: 1;
+}
+nav.fill ul li a:hover:after {
+  z-index: -10;
+  animation: fill 0.5s forwards;
+  -webkit-animation: fill 0.5s forwards;
+  -moz-animation: fill 0.5s forwards;
+  opacity: 1;
+}
+
+
+
+@-webkit-keyframes fill {
+    0% {
+      width: 0%;
+      height: 1px;
+    }
+    50% {
+      width: 100%;
+      height: 1px;
+    }
+    100% {
+      width: 100%;
+      height: 100%;
+      background: #333;
+    }
+  }
+  
+
+
+
