table styling - attempt

--- a/css/nav.css
+++ b/css/nav.css
@@ -101,7 +101,7 @@ nav.fill ul li a:hover:after {
 
 
 
-@-webkit-keyframes fill {
+@keyframes fill {
     0% {
       width: 0%;
       height: 1px;
