--- a/css/table.css
+++ b/css/table.css
@@ -1,6 +1,6 @@
 /* Table styling */
 
-.styled-table {
+table {
 
     border-collapse: collapse;
     margin: 25px 0;
@@ -14,7 +14,7 @@
 
 /* Styling table headers */
 
-.styled-table thead tr {
+table thead tr {
     background-color: #009879;
     color: #ffffff;
     text-align: left;
@@ -22,29 +22,29 @@
 
 /* Styling table cells */
 
-.styled-table th,
-.styled-table td {
+table th,
+table td {
     padding: 12px 15px;
 }
 
 /* Styling table rows */
 
-.styled-table tbody tr {
+table tbody tr {
     border-bottom: 1px solid #dddddd;
 }
 
-.styled-table tbody tr:nth-of-type(even) {
+table tbody tr:nth-of-type(even) {
     background-color: #f3f3f3;
 }
 
-.styled-table tbody tr:last-of-type {
+table tbody tr:last-of-type {
     border-bottom: 2px solid #009879;
 }
 
 
 /* Style active row */
 
-table.styled-table tbody tr.active-row {
+styled-table tbody tr.active-row {
     font-weight: bold;
     color: #009879;
 }
