scroll for mobile devices, nav changes for mobile

--- a/css/nav.css
+++ b/css/nav.css
@@ -89,6 +89,25 @@ nav.fill ul li a:hover:after {
     }
   }
   
+  @media only screen and (max-width: 480px) {
+    /* horizontal scrollbar for tables if mobile screen */
+    nav.mobilefill {
+      
+        font-size: 130%;
+        margin-top: 15%;
+        padding-bottom: 25px;
+        white-space: nowrap;
 
+        
+    }
 
-
+    nav ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #FFD3B6;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0px;
+  }
+  }
