--- a/css/table.css
+++ b/css/table.css
@@ -2,14 +2,19 @@
 .main-table {
 
     border-collapse: collapse;
-    margin: 25px 0;
+    margin: 25px 5px, 0px, 5px;
     font-size: 0.9em;
     font-family: sans-serif;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-
+    width: 80%;
+    
     }
 
+.container {
+
+    padding-left: 0;
+}
 
     /* Styling table headers */
 
@@ -24,7 +29,9 @@
 .main-table th,
 .main-table td {
     padding: 12px 15px;
-    }
+    overflow: hidden; 
+}
+    
 
     /* Styling table rows */
 
@@ -39,3 +46,23 @@
 .main-table tbody tr:last-of-type {
     border-bottom: 2px solid #009879;
     }
+
+table tr {
+
+    white-space:nowrap;
+        
+    }
+/* Scroll Table */
+
+@media only screen and (max-width: 600px) {
+    /* horizontal scrollbar for tables if mobile screen */
+    .tablemobile {
+        overflow-x: auto;
+        display: block;
+        white-space: nowrap;
+        overflow-x: auto;
+        
+      
+        
+    }
+}
