--- a/css/nav.css
+++ b/css/nav.css
@@ -94,8 +94,8 @@ nav.fill ul li a:hover:after {
     nav.mobilefill {
       
         font-size: 130%;
-        margin-top: 15%;
-        padding-bottom: 25px;
+        margin-top: 2%;
+        padding-bottom: 12%;
         white-space: nowrap;
 
         
